--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -28,6 +28,42 @@
   color: #61dafb;
 }
 
+app.css
+
+
+.autocomplete-suggestions {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #ddd;
+  background-color: #fff;
+  max-height: 100%; /* Remove max-height */
+  /* overflow: hidden; Prevent scroll bar */
+  width: 100%;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.autocomplete-suggestions.active {
+  display: block;
+}
+
+.suggestion-item {
+  padding: 10px;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+}
+
+.suggestion-item:hover,
+.suggestion-item.hovered {
+  background-color: #f0f8ff; /* Light blue */
+  font-weight: bold;
+}
+
+.suggestions-list {
+  list-style-type: none;
+  margin: 0;
+  padding: 5;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
